--- a/index.html
+++ b/index.html
@@ -1,32 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Profile</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header>
-      <h1>A random change</h1>
-      <h1>Oussaid Dridi</h1>
-      <p>Web Developer | Designer</p>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/3613df137b.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
+  <title>My Portfolio</title>
+</head>
+<body>
+  <header>
+    <img src="profile-pic.webp" alt="" srcset="" class="profile-pic">
+    <h1>Maram Chaouch</h1>
+    <p>Stustent at ISAMM</p>
+</header>
+<section id="about-me">
+  <i class="fa-solid fa-user"></i>
+  <h2>About Me</h2>
+  <hr>
+  <p>Hello! I'm  Maram chaouch, a first-year Computer Science student at ISAMM with a passion for Big Data 
+    and Data Analytics. I am enthusiastic about using technology to solve real-world problems and committed 
+    to growing my skills to contribute to innovative projects.</p>
+</section>
+<section id="education">
+  <i class="fa-solid fa-school"></i>
+  <h2>Education</h2>
+  <hr>
+  <ul>
+    <li>ISAMM -  Higher Institute of Multimedia Arts of Manouba <h4>1st year student of Computer Science <br> 2024 still going</h4></li>  
+    <li>Ibn Abi Dhief High School - Bachelor of Science in Computer Science <h4>2022-2023</h4></li>
+  
+  </ul>
 
-    <section class="bio">
-      <img src="profile-pic.webp" alt="John's profile picture" />
-      <p>
-        Hi! I'm John, a web developer passionate about creating responsive and
-        accessible websites. I love coding and learning new web technologies.
-      </p>
-    </section>
+</section>
+<section id="skills">
+  <i class="fa-solid fa-laptop-code"></i>
+  <h2>Skills</h2>
+  <hr>
+  <ul>
+    <li><strong>Technical Skills:</strong>
+        <ul>
+            <li>Proficient in multiple web development languages (HTML, CSS, JavaScript, PHP)</li>
+            <li>Experience with responsive design and front-end frameworks (Bootstrap, Tailwind)</li>
+            <li>Back-end development using Node.js and databases (MySQL, MongoDB)</li>
+        </ul>
+    </li>
+    <li><strong>Soft Skills:</strong>
+        <ul>
+            <li>Strong communication skills</li>
+            <li>Effective teamwork and collaboration in group projects</li>
+            <li>Problem-solving and critical thinking</li>
+            <li>Adaptability to new tools and technologies</li>
+        </ul>
+    </li>
+</ul> 
+</section>
+<section>
+  <h1>My Projects</h1>
+  <ul>
+      <li>
+          <strong>Project Name:</strong> E-Commerce Website<br>
+          <strong>Description:</strong> A responsive e-commerce platform with user authentication, product listings, and a shopping cart.<br>
+          <strong>Technologies Used:</strong>
+          <ul>
+              <li>Front-end: HTML, CSS, JavaScript, Bootstrap</li>
+              <li>Back-end: PHP, MySQL</li>
+              <li>Version Control: Git and GitHub</li>
+          </ul>
+          <strong>Skills Demonstrated:</strong>
+          <ul>
+              <li>Technical Skills: Web development, database management, and API integration</li>
+              <li>Soft Skills: Collaboration with a team of 4 developers using Agile methodology</li>
+              <li>Problem-Solving: Debugged and optimized code for a smoother user experience</li>
+          </ul>
+      </li>
+      <li>
+          <strong>Project Name:</strong> Portfolio Website<br>
+          <strong>Description:</strong> A personal portfolio to showcase projects and skills with a modern design.<br>
+          <strong>Technologies Used:</strong>
+          <ul>
+              <li>Front-end: HTML, CSS, JavaScript</li>
+              <li>Frameworks: Tailwind CSS</li>
+          </ul>
+          <strong>Skills Demonstrated:</strong>
+          <ul>
+              <li>Technical Skills: Responsive design, deployment on GitHub Pages</li>
+              <li>Soft Skills: Time management and self-motivation in a solo project</li>
+          </ul>
+      </li>
+  </ul>
+</section>
+<footer>
+  <p>&copy; 2023 Maram Chaouch. All rights reserved.</p>
+</footer>
 
-    <div>
-      Hello my name is,
-    </div>
-    <footer>
-      <p>
-        Contact me: <a href="mailto:johndoe@example.com">johndoe@example.com</a>
-      </p>
-    </footer>
-  </body>
+</body>
+</html>
